[project]
name = "jackbox-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.29.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings[yaml]>=2.13.1",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "python -m cmd.jackbox_bot.main"

list = "task --list"
